[edit] tests work